--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,9 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.hibernate.use-new-id-generator-mappings=true
 spring.jpa.hibernate.ddl-auto=none
 
-server.port=8898
+#server.address=175.125.139.183
+server.port=${port:8898}
+#server.port=8898
 
 #thymeleaf
 spring.thymeleaf.prefix=classpath:templates/
@@ -19,3 +21,6 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.cache=false
 spring.thymeleaf.order=0
+
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+logging.level.org.springframework.web=DEBUG
