--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://175.125.139.183:3306/ENGLISH
 spring.datasource.username=root
-spring.datasource.password=qwe123
+spring.datasource.password=
 
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
