--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,7 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://175.125.139.183:3306/ENGLISH
+spring.datasource.url=jdbc:mariadb://175.125.139.183:3306/give_me_mask
 spring.datasource.username=root
 spring.datasource.password=
-
-spring.jpa.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=false
-spring.jpa.hibernate.use-new-id-generator-mappings=true
-spring.jpa.hibernate.ddl-auto=none
 
 #server.address=175.125.139.183
 server.port=${port:8898}
